# polyglot-agent-labs

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  justfile  justfile.win
system-designs/01-rust-mcp-server/: README.md  client.py  docker-compose.yml  pyproject.toml  test_client.py
system-designs/01-rust-mcp-server/server/: Cargo.toml  Dockerfile
system-designs/01-rust-mcp-server/server/src/: main.rs
system-designs/02-fastmcp-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py  test_client.py
system-designs/03-polyglot-faq/: .env.example  README.md  docker-compose.yml  pyproject.toml  test_client.py
system-designs/03-polyglot-faq/api-gateway/: Cargo.toml  Dockerfile
system-designs/03-polyglot-faq/api-gateway/src/: main.rs  mcp_client.rs  streaming.rs
system-designs/03-polyglot-faq/client/: simple_client.py
system-designs/03-polyglot-faq/doc-search-server/: Cargo.toml  Dockerfile
system-designs/03-polyglot-faq/doc-search-server/src/: documents.rs  main.rs  related.rs  scoring.rs  time.rs
system-designs/03-polyglot-faq/workflow-server/: Dockerfile  pyproject.toml  server.py  workflow.py
use-cases/00-hello-world/python/: main.py  pyproject.toml
use-cases/00-hello-world/rust/: Cargo.toml
use-cases/01-simple-completion/python/: main.py  pyproject.toml
use-cases/01-simple-completion/rust/: Cargo.toml
use-cases/02-mcp-server/python/: main.py  pyproject.toml  server.py
use-cases/02-mcp-server/rust/: Cargo.toml
use-cases/02-mcp-server/rust/src/: main.rs
use-cases/03-conversational-agent/python/: main.py  pyproject.toml
use-cases/03-conversational-agent/rust/: Cargo.toml
use-cases/04-agent-tool-use/python/: main.py  pyproject.toml
use-cases/04-agent-tool-use/rust/: Cargo.toml
use-cases/05-rag-local-docs/python/: main.py  pyproject.toml
use-cases/05-rag-local-docs/rust/: Cargo.toml
use-cases/06-structured-output/python/: main.py  pyproject.toml
use-cases/06-structured-output/rust/: Cargo.toml
use-cases/08-multi-agent-collaboration/python/: main.py  pyproject.toml
use-cases/08-multi-agent-collaboration/rust/: Cargo.toml
use-cases/10-customer-support-agent/python/: main.py  pyproject.toml
use-cases/10-customer-support-agent/rust/: Cargo.toml
use-cases/10-customer-support-agent/rust/src/: main.rs
use-cases/11-code-review-agent/python/: main.py  pyproject.toml
use-cases/11-code-review-agent/rust/: Cargo.toml
use-cases/13-workflow-automation-agent/python/: main.py  pyproject.toml
use-cases/13-workflow-automation-agent/rust/: Cargo.toml
(+15 files in other folders)
