[package]
name = "faq-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.2", features = ["client", "transport-streamable-http-client-reqwest"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"


