[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.1", features = ["server", "client", "transport-io", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
